feat добавил запрос для получения инфы по файлу
